--- a/src/pages/Footer.css
+++ b/src/pages/Footer.css
@@ -1,8 +1,4 @@
-/* CSS checked x unchecked o 
-redundant checked o unchecked x 
-double css checked o unchecked x  */
 .Footer {
-
   background-color: var(---baselight);
   color: var(---base);
 }
@@ -14,13 +10,12 @@ double css checked o unchecked x  */
   color: var(---baselight);
 }
 @media (max-width: 768px) {
-  .Footer  {
-   font-size: 12px;
+  .Footer {
+    font-size: 12px;
   }
-  
-}@media (max-width: 400px) {
-  .Footer  {
-   font-size: 9px;
+}
+@media (max-width: 400px) {
+  .Footer {
+    font-size: 10px;
   }
-  
 }
